--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,47 @@
 @import './css/global';
 
+* {
+    box-sizing: border-box;
+    &:before,
+    &:after {
+        box-sizing: border-box;
+    }
+}
 .App {
     // display: none;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    li {
+        padding: 10px 0;
+    }
+}
+
+
+input[type="text"],
+input[type="password"] {
+    display: block;
+    margin: 0 auto 10px;;
+    border: 1px solid transparent;
+    padding: 4px 15px;
+    width: 100%;
+    max-width: 280px;
+    height: 30px;
+    line-height: 20px;
+    font-size: 14px;
+}
+input[type="submit"] {
+    display: block;
+    margin: 0 auto 10px;;
+    border: 1px solid transparent;
+    padding: 4px 15px;
+    width: 100%;
+    max-width: 280px;
+    height: 30px;
+    line-height: 20px;
+    font-size: 14px;
+    background: #ccc;
 }
