dynamic form generation & validation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
 body {
   background: #dcdcdc; }
 
+input.error {
+  border-color: #f00 !important; }
+
 * {
   box-sizing: border-box; }
   *:before, *:after {
