--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,8 @@ input.error {
   border-color: #f00 !important; }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   display: block;
   margin: 0 auto 24px;
   border: 1px solid transparent;
@@ -55,8 +56,30 @@ input[type="submit"] {
 [disabled] {
   cursor: default !important; }
 
-.msg.error {
-  color: red; }
+.msg {
+  text-align: center; }
+  .msg.error {
+    color: red; }
+  .msg.success {
+    color: green; }
 
-.msg.success {
-  color: green; }
+.popup {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #bbb;
+  display: flex;
+  align-items: center;
+  align-content: center; }
+  .popup .close {
+    position: absolute;
+    top: 20px;
+    right: 20px; }
+
+.user-box {
+  position: absolute;
+  top: 20px;
+  right: 20px; }
