--- a/client/src/css/_global.scss
+++ b/client/src/css/_global.scss
@@ -1,8 +1,5 @@
 body {
-    background: #dcdcdc;
+    margin: 0;
+    background: #fff;
 }
 
-
-input.error {
-    border-color: #f00 !important;
-}
