--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,60 +1,128 @@
 body {
-  background: #dcdcdc; }
+  font: 18px/24px "Roboto", "Arial", "Helvetica", sans-serif; }
 
-input.error {
-  border-color: #f00 !important; }
+h1 {
+  margin: 0 0 30px;
+  line-height: 30px;
+  font-size: 24px; }
+
+h2 {
+  margin: 0 0 26px;
+  line-height: 26px;
+  font-size: 22px; }
+
+h3 {
+  margin: 0 0 24px;
+  line-height: 24px;
+  font-size: 20px; }
+
+a {
+  text-decoration: none;
+  color: #282; }
+  a:focus, a:hover {
+    outline: none;
+    color: #185f18; }
+
+body {
+  margin: 0;
+  background: #fff; }
+
+form {
+  margin: 0 auto;
+  max-width: 280px; }
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="submit"],
+button {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  border: 1px solid transparent;
+  padding: 4px 15px;
+  height: 30px;
+  font-family: "Roboto", "Arial", "Helvetica", sans-serif;
+  line-height: 20px;
+  font-size: 14px;
+  outline: none; }
+  form input[type="text"], form
+  input[type="password"], form
+  input[type="email"], form
+  input[type="submit"], form
+  button {
+    display: block;
+    margin: 0 auto 24px;
+    width: 100%; }
+  input[type="text"][disabled],
+  input[type="password"][disabled],
+  input[type="email"][disabled],
+  input[type="submit"][disabled],
+  button[disabled] {
+    opacity: 0.5;
+    cursor: default !important; }
+  input[type="text"].error,
+  input[type="password"].error,
+  input[type="email"].error,
+  input[type="submit"].error,
+  button.error {
+    color: #f00 !important;
+    border-color: #f00 !important; }
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  border-color: #ccc;
+  background: #fff; }
+  input[type="text"]:focus,
+  input[type="password"]:focus,
+  input[type="email"]:focus {
+    border-color: #282; }
+
+button,
+input[type="submit"] {
+  color: #fff;
+  background: #282;
+  cursor: pointer; }
+  button:hover, button:focus,
+  input[type="submit"]:hover,
+  input[type="submit"]:focus {
+    background: #185f18; }
+
+.main-nav {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  margin: 0;
+  padding: 0;
+  line-height: 20px;
+  font-size: 14px;
+  list-style: none; }
+  .main-nav li {
+    display: inline-block;
+    margin: 0 10px 0 0; }
+  .main-nav a {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 5px 20px;
+    color: #fff;
+    background: #282; }
+    .main-nav a:hover, .main-nav a:focus {
+      background: #185f18; }
 
 * {
   box-sizing: border-box; }
   *:before, *:after {
     box-sizing: border-box; }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
-  ul li {
-    padding: 10px 0; }
-
-form {
-  margin: 0 auto;
-  max-width: 280px; }
+.App {
+  padding: 100px 20px 20px; }
 
 .form-valid-msg {
   margin: -24px 0 0;
   line-height: 24px;
   font-size: 12px;
   color: red; }
-
-input.error {
-  border-color: #f00 !important; }
-
-input[type="text"],
-input[type="password"],
-input[type="email"] {
-  display: block;
-  margin: 0 auto 24px;
-  border: 1px solid transparent;
-  padding: 4px 15px;
-  width: 100%;
-  height: 30px;
-  line-height: 20px;
-  font-size: 14px; }
-
-input[type="submit"] {
-  display: block;
-  margin: 0 auto 24px;
-  border: 1px solid transparent;
-  padding: 4px 15px;
-  width: 100%;
-  height: 30px;
-  line-height: 20px;
-  font-size: 14px;
-  background: #ccc;
-  cursor: pointer; }
-
-[disabled] {
-  cursor: default !important; }
 
 .msg {
   text-align: center; }
@@ -83,3 +151,5 @@ input[type="submit"] {
   position: absolute;
   top: 20px;
   right: 20px; }
+  .user-box button {
+    margin: 0 0 0 10px; }
