--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,11 @@
+@import './css/vars';
+@import './css/typography';
 @import './css/global';
+@import './css/forms';
+
+@import './css/components/main-nav';
+
+
 
 * {
     box-sizing: border-box;
@@ -7,60 +14,18 @@
         box-sizing: border-box;
     }
 }
+
 .App {
-    // display: none;
+    padding: 100px 20px 20px;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    li {
-        padding: 10px 0;
-    }
-}
 
-form {
-    margin: 0 auto;
-    max-width: 280px;
-}
 .form-valid-msg {
     margin: -24px 0 0;
     line-height: 24px;
     font-size: 12px;
     color: red;
 }
-input.error {
-    border-color: #f00 !important;
-}
-input[type="text"],
-input[type="password"],
-input[type="email"] {
-    display: block;
-    margin: 0 auto 24px;
-    border: 1px solid transparent;
-    padding: 4px 15px;
-    width: 100%;
-    height: 30px;
-    line-height: 20px;
-    font-size: 14px;
-}
-input[type="submit"] {
-    display: block;
-    margin: 0 auto 24px;
-    border: 1px solid transparent;
-    padding: 4px 15px;
-    width: 100%;
-    height: 30px;
-    line-height: 20px;
-    font-size: 14px;
-    background: #ccc;
-    cursor: pointer;
-}
-[disabled] {
-    cursor: default !important;
-}
-
 
 .msg {
     text-align: center;
@@ -95,4 +60,7 @@ input[type="submit"] {
     position: absolute;
     top: 20px;
     right: 20px;
+    button {
+        margin: 0 0 0 10px;
+    }
 }
