burger animation started

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,6 +3,7 @@
 @import './css/global';
 @import './css/forms';
 
+@import './css/components/menu-switch';
 @import './css/components/main-nav';
 
 
