--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,10 +32,20 @@ form {
   max-width: 280px; }
 
 .side-btn {
-  float: right;
-  margin: 0;
   padding: 4px;
-  width: 30px; }
+  width: 30px;
+  flex-shrink: 0; }
+
+form .line {
+  display: flex;
+  justify-content: space-between; }
+  form .line > * {
+    margin-left: 12px;
+    margin-right: 12px; }
+    form .line > *:first-child {
+      margin-left: 0; }
+    form .line > *:last-child {
+      margin-right: 0; }
 
 select {
   display: inline-block;
@@ -52,11 +62,8 @@ select {
   background: #fff; }
   form select {
     display: block;
-    margin: 0 auto 24px;
+    margin-bottom: 24px;
     width: 100%; }
-  .side-btn + select {
-    margin-left: 0;
-    width: calc(100% - 50px); }
   select:focus {
     border-color: #282; }
   select[disabled] {
@@ -65,6 +72,28 @@ select {
   select.error {
     color: #f00 !important;
     border-color: #f00 !important; }
+
+textarea {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  border: 1px solid #ccc;
+  padding: 4px 15px;
+  height: 90px;
+  font-family: "Roboto", "Arial", "Helvetica", sans-serif;
+  line-height: 20px;
+  font-size: 14px;
+  background: #fff;
+  outline: none; }
+  textarea:focus {
+    border-color: #282; }
+  textarea.error {
+    color: #f00 !important;
+    border-color: #f00 !important; }
+  form textarea {
+    display: block;
+    margin: 0 auto 24px;
+    width: 100%; }
 
 input[type="text"],
 input[type="password"],
@@ -89,13 +118,6 @@ button {
     display: block;
     margin: 0 auto 24px;
     width: 100%; }
-  .side-btn + input[type="text"], .side-btn +
-  input[type="password"], .side-btn +
-  input[type="email"], .side-btn +
-  input[type="submit"], .side-btn +
-  button {
-    margin-left: 0;
-    width: calc(100% - 50px); }
   input[type="text"][disabled],
   input[type="password"][disabled],
   input[type="email"][disabled],
