--- a/client/src/App.css
+++ b/client/src/App.css
@@ -208,7 +208,8 @@ input[type="submit"] {
   list-style: none; }
   .main-nav li {
     display: inline-block;
-    margin: 0 10px 0 0; }
+    position: relative;
+    margin: 0 3px 0 0; }
   .main-nav a {
     display: inline-block;
     vertical-align: middle;
@@ -217,6 +218,36 @@ input[type="submit"] {
     background: #282; }
     .main-nav a:hover, .main-nav a:focus {
       background: #185f18; }
+  .main-nav li:hover ul {
+    display: block; }
+  .main-nav ul {
+    position: absolute;
+    display: none;
+    bottom: 100%;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-width: 100px; }
+    .main-nav ul li {
+      display: block;
+      margin: 0;
+      padding: 3px 0; }
+    .main-nav ul a {
+      display: block; }
+
+.datepicker .days {
+  overflow: hidden;
+  width: 210px; }
+
+.datepicker .day {
+  float: left;
+  border: 1px solid black;
+  width: 30px;
+  height: 30px;
+  line-height: 28px;
+  font-size: 14px;
+  text-align: center; }
 
 * {
   box-sizing: border-box; }
