--- a/client/src/css/components/_datepicker.scss
+++ b/client/src/css/components/_datepicker.scss
@@ -6,14 +6,24 @@ $bgh: $mbch;
 $bg-chosen: darken($mbc, 20%);
 
 
+.datepicker-holder {
+    position: relative;
+}
 .datepicker {
-    padding: 3px 0;
+    // position: absolute;
+    // top: 100%;
+    // left: 0;
+    width: 280px;
+    background: $white;
+    .head {
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 0;
+        line-height: 30px;
+    }
     .days {
-        overflow: hidden;
         border: solid $border-color;
         border-width: 0 0 1px 1px;
-        width: 212px;
-        width: 400px;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
@@ -56,6 +66,13 @@ $bg-chosen: darken($mbc, 20%);
         }
         &.off {
             button {
+                background: #666;
+                cursor: default;
+            }
+        }
+        &.weekday {
+            button {
+                color: $border-color;
                 background: $fg;
                 cursor: default;
             }
