Date switchers + date refactoring

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -292,6 +292,13 @@ input[type="submit"] {
       background: #fff;
       cursor: default; }
 
+.date-box {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  line-height: 30px;
+  font-size: 16px; }
+
 * {
   box-sizing: border-box; }
   *:before, *:after {
