--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,6 +6,7 @@
 @import './css/components/menu-switch';
 @import './css/components/main-nav';
 @import './css/components/datepicker';
+@import './css/components/date';
 
 
 
