refactoring events list, event editing started

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,6 +7,7 @@
 @import './css/components/main-nav';
 @import './css/components/datepicker';
 @import './css/components/date';
+@import './css/components/loader';
 
 
 
