--- a/client/src/App.css
+++ b/client/src/App.css
@@ -299,6 +299,29 @@ input[type="submit"] {
   line-height: 30px;
   font-size: 16px; }
 
+.loader {
+  position: relative;
+  margin: 20px auto;
+  width: 40px;
+  height: 40px; }
+  .loader:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0 solid #683;
+    border-top-width: 2px;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    animation: loader 1s ease-in-out infinite; }
+
+@keyframes loader {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+
 * {
   box-sizing: border-box; }
   *:before, *:after {
