--- a/client/src/App.css
+++ b/client/src/App.css
@@ -365,3 +365,9 @@ input[type="submit"] {
   right: 20px; }
   .user-box button {
     margin: 0 0 0 10px; }
+
+.event {
+  margin: 10px;
+  max-width: 300px;
+  padding: 10px;
+  background: #eee; }
