--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -68,3 +68,11 @@
         margin: 0 0 0 10px;
     }
 }
+
+
+.event {
+    margin: 10px;
+    max-width: 300px;
+    padding: 10px;
+    background: #eee;
+}
