--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@ body {
 
 form {
   margin: 0 auto;
-  max-width: 280px; }
+  width: 280px; }
 
 .side-btn {
   padding: 4px;
@@ -79,7 +79,11 @@ textarea {
   margin: 0;
   border: 1px solid #ccc;
   padding: 4px 15px;
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
   height: 90px;
+  min-height: 90px;
   font-family: "Roboto", "Arial", "Helvetica", sans-serif;
   line-height: 20px;
   font-size: 14px;
@@ -370,3 +374,8 @@ input[type="submit"] {
   margin: 10px;
   padding: 10px;
   background: #eee; }
+
+.link-close {
+  position: absolute;
+  top: 20px;
+  left: 20px; }
