--- a/client/src/css/_forms.scss
+++ b/client/src/css/_forms.scss
@@ -1,7 +1,7 @@
 
 form {
     margin: 0 auto;
-    max-width: 280px;
+    width: 280px;
 }
 
 .side-btn {
@@ -62,7 +62,11 @@ textarea {
     margin: 0;
     border: 1px solid $gray;
     padding: 4px 15px;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     height: 90px;
+    min-height: 90px;
     font-family: $mff;
     line-height: 20px;
     font-size: 14px;
