--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,6 +159,16 @@ input[type="submit"] {
   button.danger,
   input[type="submit"].danger {
     background: red; }
+  button.icon,
+  input[type="submit"].icon {
+    padding: 4px 0;
+    width: 30px; }
+    button.icon svg,
+    input[type="submit"].icon svg {
+      display: block;
+      margin: 0 auto;
+      height: 16px;
+      width: 16px; }
 
 .menu-switch {
   position: absolute;
@@ -204,19 +214,31 @@ input[type="submit"] {
       top: 75%;
       transition: all 0.5s ease-out; }
 
+.main-nav-opener {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 5; }
+
 .main-nav {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+  position: fixed;
+  z-index: 4;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   padding: 0;
   line-height: 20px;
   font-size: 14px;
-  list-style: none; }
+  list-style: none;
+  background: #4a6325; }
   .main-nav li {
-    display: inline-block;
-    position: relative;
-    margin: 0 3px 0 0; }
+    margin: 10px 0; }
   .main-nav a {
     display: inline-block;
     vertical-align: middle;
@@ -244,9 +266,17 @@ input[type="submit"] {
       display: block; }
 
 .datepicker-holder {
-  position: relative; }
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 5px; }
+  .datepicker-holder > button {
+    vertical-align: top; }
 
 .datepicker {
+  position: absolute;
+  top: 100%;
+  left: 0;
   width: 280px;
   background: #fff; }
   .datepicker .head {
@@ -300,9 +330,8 @@ input[type="submit"] {
       cursor: default; }
 
 .date-box {
-  position: fixed;
-  top: 20px;
-  left: 20px;
+  display: inline-block;
+  vertical-align: top;
   line-height: 30px;
   font-size: 16px; }
 
@@ -335,7 +364,26 @@ input[type="submit"] {
     box-sizing: border-box; }
 
 .App {
-  padding: 100px 20px 20px; }
+  position: relative;
+  padding: 100px 10px;
+  min-height: 100vh; }
+
+.header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px; }
+
+.main-logo {
+  display: block;
+  margin: 0 auto 8px;
+  width: 40px;
+  height: 40px; }
+
+.add-popup-opener {
+  position: fixed;
+  bottom: 10px;
+  right: 10px; }
 
 .form-valid-msg {
   margin: -24px 0 0;
@@ -352,7 +400,7 @@ input[type="submit"] {
 
 .popup {
   position: fixed;
-  z-index: 1;
+  z-index: 6;
   top: 0;
   right: 0;
   bottom: 0;
@@ -361,12 +409,14 @@ input[type="submit"] {
   display: flex;
   align-items: center;
   align-content: center; }
-  .popup .close {
-    position: absolute;
-    top: 20px;
-    right: 20px; }
+
+.link-close {
+  position: absolute;
+  top: 10px;
+  left: 10px; }
 
 .user-box {
+  display: none;
   position: absolute;
   top: 20px;
   right: 20px; }
@@ -378,7 +428,9 @@ input[type="submit"] {
   padding: 10px;
   background: #eee; }
 
-.link-close {
-  position: absolute;
-  top: 20px;
-  left: 20px; }
+.dateswitcher-box {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 5px; }
+  .dateswitcher-box button {
+    vertical-align: top; }
