--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,7 +20,28 @@
 }
 
 .App {
-    padding: 100px 20px 20px;
+    position: relative;
+    padding: 100px 10px;
+    min-height: 100vh;
+}
+.header {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+}
+
+.main-logo {
+    display: block;
+    margin: 0 auto 8px;
+    width: 40px;
+    height: 40px;
+}
+
+.add-popup-opener {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
 
 
@@ -43,7 +64,7 @@
 
 .popup {
     position: fixed;
-    z-index: 1;
+    z-index: 6;
     top: 0;
     right: 0;
     bottom: 0;
@@ -52,15 +73,22 @@
     display: flex;
     align-items: center;
     align-content: center;
-    .close {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-    }
+    // .close {
+    //     position: absolute;
+    //     top: 10px;
+    //     right: 10px;
+    // }
+}
+.link-close {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 
+
 .user-box {
+    display: none;
     position: absolute;
     top: 20px;
     right: 20px;
@@ -78,8 +106,13 @@
 }
 
 
-.link-close {
-    position: absolute;
-    top: 20px;
-    left: 20px;
+
+
+.dateswitcher-box {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 5px;
+    button {
+        vertical-align: top;
+    }
 }
