--- a/client/src/css/components/_date.scss
+++ b/client/src/css/components/_date.scss
@@ -1,8 +1,7 @@
 
 .date-box {
-    position: fixed;
-    top: 20px;
-    left: 20px;
+    display: inline-block;
+    vertical-align: top;
     line-height: 30px;
     font-size: 16px;
 }
