--- a/client/src/css/components/_main-nav.scss
+++ b/client/src/css/components/_main-nav.scss
@@ -1,17 +1,30 @@
 
+
+.main-nav-opener {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 5;
+}
 .main-nav {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
+    position: fixed;
+    z-index: 4;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
     line-height: 20px;
     font-size: 14px;
     list-style: none;
+    background: $mbch;
     li {
-        display: inline-block;
-        position: relative;
-        margin: 0 3px 0 0;
+        margin: 10px 0;
     }
     a {
         display: inline-block;
