--- a/client/src/css/components/_main-nav.scss
+++ b/client/src/css/components/_main-nav.scss
@@ -22,7 +22,7 @@
     line-height: 20px;
     font-size: 14px;
     list-style: none;
-    background: $mbch;
+    background: #ddd;
     li {
         margin: 10px 0;
     }
