--- a/client/src/App.css
+++ b/client/src/App.css
@@ -400,6 +400,7 @@ input[type="submit"] {
   right: 0;
   bottom: 0;
   left: 0;
+  overflow: auto;
   display: flex;
   flex-wrap: wrap;
   border: solid #fff;
@@ -411,12 +412,18 @@ input[type="submit"] {
   top: 10px;
   left: 10px; }
 
-.user-box {
-  position: absolute;
-  top: 20px;
-  right: 20px; }
-  .user-box button {
-    margin: 0 0 0 10px; }
+.user-nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 100%;
+  height: calc(100vh - 25vw);
+  margin: 0;
+  padding: 0;
+  line-height: 24px;
+  font-size: 20px;
+  list-style: none;
+  background: #683; }
 
 .dateswitcher-box {
   display: inline-block;
@@ -459,3 +466,6 @@ input[type="submit"] {
   .main-nav .tile {
     width: 50%;
     height: 50vw; }
+  .user-nav .tile {
+    width: 100%;
+    height: calc((100vh - 25vw) / 2); }
