--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -73,6 +73,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    overflow: auto;
     display: flex;
     flex-wrap: wrap;
     border: solid $white;
@@ -95,14 +96,32 @@
 
 
 
-.user-box {
-//    display: none;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    button {
-        margin: 0 0 0 10px;
-    }
+
+.user-nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    width: 100%;
+    height: calc(100vh - 25vw);
+    margin: 0;
+    padding: 0;
+    line-height: 24px;
+    font-size: 20px;
+    list-style: none;
+    background: $brand;
+    // a {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     width: 100%;
+    //     height: 100%;
+    //     color: $sfgc;
+    //     background: $sbgc;
+    //     &:hover,
+    //     &:focus {
+    //         background: $mbch;
+    //     }
+    // }
 }
 
 
@@ -157,5 +176,9 @@
     .main-nav & {
         width: 50%;
         height: 50vw;
+    }
+    .user-nav & {
+        width: 100%;
+        height: calc((100vh - 25vw) / 2);
     }
 }
