--- a/client/src/css/components/_datepicker.scss
+++ b/client/src/css/components/_datepicker.scss
@@ -16,10 +16,10 @@ $bg-chosen: darken($mbc, 20%);
     }
 }
 .datepicker {
-    position: fixed;
-    bottom: 0%;
-    left: 0;
-    width: 280px;
+    // position: fixed;
+    // bottom: 0%;
+    // left: 0;
+    // width: 280px;
     width: 100%;
     background: $white;
     .head {
