--- a/client/src/App.css
+++ b/client/src/App.css
@@ -270,10 +270,6 @@ input[type="submit"] {
     vertical-align: top; }
 
 .datepicker {
-  position: fixed;
-  bottom: 0%;
-  left: 0;
-  width: 280px;
   width: 100%;
   background: #fff; }
   .datepicker .head {
@@ -350,9 +346,22 @@ input[type="submit"] {
     transform: rotate(360deg); } }
 
 .event {
-  margin: 10px;
-  padding: 10px;
+  width: 100%;
+  line-height: 20px;
+  font-size: 14px;
   background: #eee; }
+  .event .icon {
+    float: right;
+    margin: -5px -10px -5px 15px;
+    padding: 0; }
+  .event .time {
+    padding: 5px 10px;
+    border-bottom: 1px solid #683; }
+  .event .line {
+    padding: 5px 10px;
+    border-bottom: 1px solid #683; }
+  .event + .event {
+    margin-top: 10px; }
 
 * {
   box-sizing: border-box; }
@@ -400,12 +409,17 @@ input[type="submit"] {
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: auto;
-  display: flex;
-  flex-wrap: wrap;
   border: solid #fff;
   border-width: 1px 0 0 1px;
-  background: #bbb; }
+  background: #fff; }
+  .popup .inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    width: 100%;
+    height: calc(100vh - 25vw); }
 
 .link-close {
   position: absolute;
@@ -458,14 +472,27 @@ input[type="submit"] {
       height: calc(100% / 1.5); }
   .tile.date-string {
     width: 100%;
-    height: 10vw;
+    padding: 0 10px;
+    height: auto;
     line-height: 30px;
     font-size: 16px; }
   .tile.btn-close {
     width: 100%; }
   .main-nav .tile {
     width: 50%;
-    height: 50vw; }
+    height: calc((100vh - 25vw) / 2); }
   .user-nav .tile {
     width: 100%;
     height: calc((100vh - 25vw) / 2); }
+
+.main-title {
+  padding: 10px;
+  width: 100%;
+  height: auto;
+  line-height: 24px;
+  font-size: 20px;
+  text-align: center; }
+
+.events-list {
+  padding: 10px;
+  width: 100%; }
