--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -73,27 +73,25 @@
     right: 0;
     bottom: 0;
     left: 0;
-    overflow: auto;
-    display: flex;
-    flex-wrap: wrap;
     border: solid $white;
     border-width: 1px 0 0 1px;
-    background: #bbb;
-    // display: flex;
-    // align-items: center;
-    // align-content: center;
-    // .close {
-    //     position: absolute;
-    //     top: 10px;
-    //     right: 10px;
-    // }
+    // background: $brand;
+    background: $white;
+    .inner {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        overflow: auto;
+        width: 100%;
+        height: calc(100vh - 25vw);
+    }
 }
 .link-close {
     position: absolute;
     top: 10px;
     left: 10px;
 }
-
 
 
 
@@ -166,7 +164,8 @@
     }
     &.date-string {
         width: 100%;
-        height: 10vw;
+        padding: 0 10px;
+        height: auto;
         line-height: 30px;
         font-size: 16px;
     }
@@ -175,10 +174,25 @@
     }
     .main-nav & {
         width: 50%;
-        height: 50vw;
+        // height: 50vw;
+        height: calc((100vh - 25vw) / 2);
     }
     .user-nav & {
         width: 100%;
         height: calc((100vh - 25vw) / 2);
     }
+}
+
+.main-title {
+    padding: 10px;
+    width: 100%;
+    height: auto;
+    line-height: 24px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.events-list {
+    padding: 10px;
+    width: 100%;
 }
