--- a/client/src/css/_forms.scss
+++ b/client/src/css/_forms.scss
@@ -155,7 +155,8 @@ input[type="submit"] {
 
 
 
-.add-event-form {
+.add-event-form, 
+.edit-event-form {
     width: 300px;
     select {
         padding: 0;
